--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <!-- pricing section -->
 
     <div id="pricing">
-      <div class="container row card-deck">
-        <div class="col col-3 card">
+      <!-- <div id="hand" class="container row card-deck">
+        <div class="col col-3 card inline-block">
           <div class="card-header">
             Featured
           </div>
@@ -107,7 +107,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="card col col-3">
+        <div class="card col col-3 inline-block">
           <div class="card-header">
             Featured
           </div>
@@ -117,7 +117,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="card col col-3">
+        <div class="card col col-3 inline-block">
           <div class="card-header">
             Featured
           </div>
@@ -127,8 +127,46 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-      </div>
+      </div> -->
+      <div class="row">
+        <div class="card-deck">
+          <div class="pricing-column col col-lg-4 col-md-6">
+            <div class="card ">
+              <div class="card-header">
+                <h4 class="card-title">Basic</h4>
+              </div>
+              <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-dark">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-column col col-lg-4 col-md-6">
+            <div class="card ">
+              <div class="card-header">
+                <h4 class="card-title">Standard</h4>
+              </div>
+              <div class="card-body">
+                <h2 class="card-text">49$ / month</h2>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-dark">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="pricing-column col col-lg-4">
+            <div class="card ">
+              <div class="card-header">
+                <h4 class="card-title">Ultimate</h4>
+              </div>
+              <div class="card-body">
+                <h2 class="card-text">99$ / month</h2>
+                <a href="#" class="btn btn-dark">Go somewhere</a>
+              </div>
+            </div>
+          </div>
 
+          </div>
+        </div>
     </div>
 
   </main>
