--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
         </div>
       </div> -->
-      <div class="row">
+      <div class="centering">
         <div class="card-deck">
           <div class="pricing-column col col-lg-4 col-md-6">
             <div class="card ">
@@ -136,7 +136,7 @@
                 <h4 class="card-title">Basic</h4>
               </div>
               <div class="card-body">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <h2 class="card-text">Free</h2>
                 <a href="#" class="btn btn-dark">Go somewhere</a>
               </div>
             </div>
@@ -160,6 +160,7 @@
               </div>
               <div class="card-body">
                 <h2 class="card-text">99$ / month</h2>
+                <p>Unlimited downloads</p>
                 <a href="#" class="btn btn-dark">Go somewhere</a>
               </div>
             </div>
