--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
               </div>
               <div class="card-body">
                 <h2 class="card-text">Free</h2>
+                <p class="card-text">20 Downloads per month</p>
+                <p class="card-text">Medium quality streaming</p>
                 <a href="#" class="btn btn-dark">Go somewhere</a>
               </div>
             </div>
@@ -148,7 +150,8 @@
               </div>
               <div class="card-body">
                 <h2 class="card-text">49$ / month</h2>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">100 Downloads per month</p>
+                <p class="card-text">High quality streaming</p>
                 <a href="#" class="btn btn-dark">Go somewhere</a>
               </div>
             </div>
@@ -160,7 +163,8 @@
               </div>
               <div class="card-body">
                 <h2 class="card-text">99$ / month</h2>
-                <p>Unlimited downloads</p>
+                <p class="card-text">Unlimited downloads</p>
+                <p class="card-text">Audiophile quality streaming</p>
                 <a href="#" class="btn btn-dark">Go somewhere</a>
               </div>
             </div>
