--- a/index.html
+++ b/index.html
@@ -132,14 +132,16 @@
         <div class="card-deck">
           <div class="pricing-column col col-lg-4 col-md-6">
             <div class="card ">
-              <div class="card-header">
+              <div class="card-header ch">
                 <h4 class="card-title">Basic</h4>
               </div>
-              <div class="card-body">
+              <div class="card-body ch">
                 <h2 class="card-text">Free</h2>
                 <p class="card-text">20 Downloads per month</p>
                 <p class="card-text">Medium quality streaming</p>
-                <a href="#" class="btn btn-dark">Go somewhere</a>
+                <p class="card-text">Simple playlists</p>
+                <p class="card-text">Lorem Ipsum Dolor</p>
+                <a href="#" class="btn btn-dark">Select plan</a>
               </div>
             </div>
           </div>
@@ -148,11 +150,13 @@
               <div class="card-header">
                 <h4 class="card-title">Standard</h4>
               </div>
-              <div class="card-body">
+              <div class="card-body cb">
                 <h2 class="card-text">49$ / month</h2>
                 <p class="card-text">100 Downloads per month</p>
                 <p class="card-text">High quality streaming</p>
-                <a href="#" class="btn btn-dark">Go somewhere</a>
+                <p class="card-text">Smart playlists</p>
+                <p class="card-text">Lorem Ipsum Dolor</p>
+                <a href="#" class="btn btn-dark">Select plan</a>
               </div>
             </div>
           </div>
@@ -161,11 +165,13 @@
               <div class="card-header">
                 <h4 class="card-title">Ultimate</h4>
               </div>
-              <div class="card-body">
+              <div class="card-body cb">
                 <h2 class="card-text">99$ / month</h2>
                 <p class="card-text">Unlimited downloads</p>
                 <p class="card-text">Audiophile quality streaming</p>
-                <a href="#" class="btn btn-dark">Go somewhere</a>
+                <p class="card-text">Smart playlists</p>
+                <p class="card-text">Lorem Ipsum Dolor</p>
+                <a href="#" class="btn btn-dark black-background white">Select plan</a>
               </div>
             </div>
           </div>
