final visual version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
   <header id="header">
     <div class="" id="nomargin">
       <nav class="navbar navbar-expand-lg  bg-dark">
@@ -150,7 +150,7 @@
               <div class="card-header">
                 <h4 class="card-title">Standard</h4>
               </div>
-              <div class="card-body cb">
+              <div class="card-body ch">
                 <h2 class="card-text">49$ / month</h2>
                 <p class="card-text">100 Downloads per month</p>
                 <p class="card-text">High quality streaming</p>
@@ -165,7 +165,7 @@
               <div class="card-header">
                 <h4 class="card-title">Ultimate</h4>
               </div>
-              <div class="card-body cb">
+              <div class="card-body ch">
                 <h2 class="card-text">99$ / month</h2>
                 <p class="card-text">Unlimited downloads</p>
                 <p class="card-text">Audiophile quality streaming</p>
@@ -182,8 +182,23 @@
 
   </main>
   <footer>
+    <table class="footerTable" >
+      <tr >
+        <td>
+          <a href="#">Privacy</a>
+        </td>
+        <td>
+          <a href="#">Terms</a>
+        </td>
+        <td>
+          <a href="#">Contact</a>
+        </td>
+      </tr>
+    </table>
+    <p>Copyright 2019, Techno Mania</p>
 
   </footer>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
